# bayes-crm

./: README.md  pyproject.toml  requirements.txt
crm/: crm_approx.py  fk.py  levy_processes.py  levy_rejection.py  strip_method.py  two_piece_envelope.py
crm/models/: occupancy_model.py
crm/utils/: general_utils.py  levy_process_utils.py  numerics.py
matlab/: README.md  matlab_test.m
notebooks/: analysis.ipynb  speed_comparison.ipynb
tests/: test_numerics.py  test_strip_method.py  test_two_piece_envelope.py
