[tool.poetry]
name = "bayes-crm"
version = "0.0.1"
description = "Bayesian nonparametric fast sampling from completely random measures."
authors = ["Dawid Bernaciak <dawid.bernaciak@ucl.ac.uk>"]
repository = "https://github.com/dbernaciak/bayes-crm"
#documentation = "
readme = "README.md"
packages = [
  {include = "crm"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.21.2"
scipy = ">=1.7.3"
numba = ">=0.54.1"
matplotlib = ">=3.4.3"
llvmlite = ">=0.42.0"
tqdm = ">=4.62.3"
joblib = ">=1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["crm"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_poetry_example"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]