[project]
name = "bayes-crm"
version = "0.0.2"
description = "Bayesian nonparametric fast sampling from completely random measures."
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "Dawid Bernaciak", email = "dawid.bernaciak@ucl.ac.uk" }
]
keywords = []
classifiers = []
dependencies = [
    "numpy>=1.21.2",
    "scipy>=1.7.3",
    "numba>=0.54.1",
    "matplotlib>=3.4.3",
    "llvmlite>=0.42.0",
    "tqdm>=4.62.3",
    "joblib>=1.1.0",
    "intel-cmplr-lib-rt>=2021.3.0",
]

[project.urls]
"Source" = "https://github.com/dbernaciak/bayes-crm"

# Optional dependencies (e.g. dev and docs) go here.
[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "deptry>=0.12.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "tox>=4.11.1",
    "ipykernel>=6.4.1",
    "jupyter>=1.0.0",
    "line_profiler_pycharm>=0.1.0",
    "black>=21.12b0",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.2.7",
    "mkdocstrings[python]>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crm", "crm.*"]   # <--- matches 'crm' and any subpackages
exclude = [
    "tests*",
    "notebooks*",
    "data*",
    "matlab*",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["crm"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    "E501",  # LineTooLong
    "E731",  # DoNotAssignLambda
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_poetry_example"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
